--- a/Meme.css
+++ b/Meme.css
@@ -1,1 +1,78 @@
+body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: white;
+}
 
+.meme-generator {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+.meme-generator label, .meme-generator input, .meme-generator button {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.meme-generator input {
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.button {
+    background-color: green;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+.divArea {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.meme {
+    position: relative;
+    min-width: 300px;
+    height: 300px;
+    border: 2px solid white;
+    margin: 10px;
+    overflow: hidden;
+    border: solid black 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.TopText,
+.BottomText {
+    border: solid 2px black;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.TopText {
+    top: 0;
+}
+
+.BottomText {
+    bottom: 0;
+}
